--- a/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
+++ b/iOS/GSMFestival/GSMFestival/Base.lproj/Main.storyboard
@@ -242,34 +242,118 @@
             </objects>
             <point key="canvasLocation" x="-1501.5999999999999" y="-252.32383808095955"/>
         </scene>
-        <!--Side Menu View Controller-->
-        <scene sceneID="2Gt-TD-4F9">
+        <!--Class View Controller-->
+        <scene sceneID="smK-S2-8DJ">
             <objects>
-                <tableViewController id="7zC-2J-7Of" customClass="SideMenuViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9Dn-pS-31A">
+                <viewController id="GR0-J7-unR" customClass="ClassViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="J7h-6m-agp">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MaV-PV-a6q">
+                                <rect key="frame" x="0.0" y="140" width="414" height="673"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ClassTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ClassTableViewCell" rowHeight="120" id="VtT-tS-o47" customClass="ClassTableViewCell" customModule="GSMFestival" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VtT-tS-o47" id="79e-p7-Wh0">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="120"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5k-qC-tKH">
+                                                    <rect key="frame" x="10" y="10" width="394" height="100"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8yy-7M-JVN">
+                                                            <rect key="frame" x="10" y="10" width="374" height="26.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hmP-CV-nDz">
+                                                            <rect key="frame" x="10" y="36.5" width="374" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" systemColor="systemGrayColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="8yy-7M-JVN" secondAttribute="trailing" constant="10" id="F5f-FD-424"/>
+                                                        <constraint firstItem="8yy-7M-JVN" firstAttribute="top" secondItem="L5k-qC-tKH" secondAttribute="top" constant="10" id="GND-c0-TIX"/>
+                                                        <constraint firstItem="hmP-CV-nDz" firstAttribute="leading" secondItem="L5k-qC-tKH" secondAttribute="leading" constant="10" id="Jbh-BU-FcE"/>
+                                                        <constraint firstAttribute="trailing" secondItem="hmP-CV-nDz" secondAttribute="trailing" constant="10" id="Vcu-Rl-6lX"/>
+                                                        <constraint firstItem="hmP-CV-nDz" firstAttribute="top" secondItem="8yy-7M-JVN" secondAttribute="bottom" id="dLC-BQ-VCC"/>
+                                                        <constraint firstItem="8yy-7M-JVN" firstAttribute="leading" secondItem="L5k-qC-tKH" secondAttribute="leading" constant="10" id="l4s-vW-0Un"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="L5k-qC-tKH" secondAttribute="trailing" constant="10" id="3q0-Wo-Ddi"/>
+                                                <constraint firstItem="L5k-qC-tKH" firstAttribute="leading" secondItem="79e-p7-Wh0" secondAttribute="leading" constant="10" id="FK0-xB-UW2"/>
+                                                <constraint firstAttribute="bottom" secondItem="L5k-qC-tKH" secondAttribute="bottom" constant="10" id="L6i-5v-3PE"/>
+                                                <constraint firstItem="L5k-qC-tKH" firstAttribute="top" secondItem="79e-p7-Wh0" secondAttribute="top" constant="10" id="VRy-HN-vim"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cellView" destination="L5k-qC-tKH" id="Asi-A4-Dml"/>
+                                            <outlet property="dateLabel" destination="hmP-CV-nDz" id="vC0-pe-EIi"/>
+                                            <outlet property="titleLabel" destination="8yy-7M-JVN" id="A2j-s1-fnE"/>
+                                            <segue destination="Y8R-EI-zQC" kind="show" id="fFL-57-uGD"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hTi-O8-RlE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="ov3-sx-d4M">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ov3-sx-d4M" id="hOg-9a-90k">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="7zC-2J-7Of" id="nAu-5i-7IE"/>
-                            <outlet property="delegate" destination="7zC-2J-7Of" id="B62-DU-lSF"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="3zo-SW-5di"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qk5-fy-jSr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <constraints>
+                            <constraint firstItem="MaV-PV-a6q" firstAttribute="leading" secondItem="hTi-O8-RlE" secondAttribute="leading" id="8zy-Tx-KGo"/>
+                            <constraint firstItem="hTi-O8-RlE" firstAttribute="bottom" secondItem="MaV-PV-a6q" secondAttribute="bottom" id="JBg-pR-KrE"/>
+                            <constraint firstItem="hTi-O8-RlE" firstAttribute="trailing" secondItem="MaV-PV-a6q" secondAttribute="trailing" id="QaD-rX-5TT"/>
+                            <constraint firstItem="MaV-PV-a6q" firstAttribute="top" secondItem="hTi-O8-RlE" secondAttribute="top" id="xlD-of-9qP"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="tMz-yf-Acw"/>
+                    <connections>
+                        <outlet property="tableView" destination="MaV-PV-a6q" id="N4i-oS-Z7l"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zvC-ML-q9u" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2291" y="2279"/>
+            <point key="canvasLocation" x="-1391.304347826087" y="2278.7946428571427"/>
+        </scene>
+        <!--Class Content View Controller-->
+        <scene sceneID="fhp-hF-f6u">
+            <objects>
+                <viewController id="Y8R-EI-zQC" customClass="ClassContentViewController" customModule="GSMFestival" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lW5-c2-zdR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EVm-OK-dNn">
+                                <rect key="frame" x="92" y="486" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NT8-ux-rdQ">
+                                <rect key="frame" x="45" y="201" width="269" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eK6-VX-ABd"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="51W-cP-8Fb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gDb-BY-ucc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-534.78260869565224" y="2279.4642857142858"/>
         </scene>
         <!--공지-->
         <scene sceneID="O71-fU-aZX">
@@ -325,6 +409,7 @@
                                         <connections>
                                             <outlet property="teacherLabel" destination="A5o-HI-WsZ" id="tVC-2B-VM6"/>
                                             <outlet property="titleLabel" destination="HU4-W7-Vht" id="Qbn-9O-WrN"/>
+                                            <segue destination="GR0-J7-unR" kind="push" id="gVX-9a-9CL"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -339,14 +424,7 @@
                             <constraint firstItem="MvW-J3-AAG" firstAttribute="bottom" secondItem="EIh-xa-anp" secondAttribute="bottom" id="lZE-Hj-xpL"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="공지" id="DGT-6m-9pd">
-                        <barButtonItem key="leftBarButtonItem" image="line.horizontal.3" catalog="system" id="GYu-QF-5vW">
-                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <action selector="didTapMenu:" destination="dbb-TS-5UV" id="87u-sb-j8q"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="공지" id="DGT-6m-9pd"/>
                     <connections>
                         <outlet property="collectionView" destination="EIh-xa-anp" id="r97-Mo-7jd"/>
                     </connections>
@@ -473,29 +551,10 @@
             </objects>
             <point key="canvasLocation" x="403" y="929"/>
         </scene>
-        <!--Side Menu Navigation Controller-->
-        <scene sceneID="Fbc-W3-RUG">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eFE-yf-qMn" customClass="SideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GUL-L6-Mmq">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="7zC-2J-7Of" kind="relationship" relationship="rootViewController" id="GMM-aW-8kr"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wfn-Ro-ucW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2290" y="1594"/>
-        </scene>
     </scenes>
     <resources>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="deno_black_logo" width="2688" height="2688"/>
-        <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <image name="lock" catalog="system" width="128" height="128"/>
         <image name="megaphone.fill" catalog="system" width="128" height="114"/>
         <image name="person" catalog="system" width="128" height="117"/>
@@ -508,6 +567,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
